--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "vite",
+    "start": "vite --host",
     "build": "tsc && vite build",
     "lint": "eslint ./src --fix --report-unused-disable-directives --max-warnings 0",
     "serve": "vite preview"
@@ -15,6 +15,7 @@
     "@heroui/theme": "^2.4.25",
     "@heroui/use-theme": "^2.1.10",
     "@react-aria/visually-hidden": "^3.8.29",
+    "@react-oauth/google": "^0.13.4",
     "@react-types/shared": "^3.32.1",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
@@ -23,10 +24,12 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
     "js-file-download": "^0.4.12",
+    "jwt-decode": "^4.0.0",
     "lockr": "^0.8.5",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.71.1",
     "react-i18next": "^16.5.1",
     "react-icons": "^5.5.0",
     "react-query": "^3.39.3",
